package: Fix version for base-files
This makes the version match up to be more in line with how Ubuntu and
other Debian variants handle version forking.

Change-Id: I9274224a1687c33bf92419b9160be22145d5b625

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-base-files (1.0) animal; urgency=medium
+base-files (9.9+mendel1) animal; urgency=medium
 
   * Initial fork of the original Debian base-files package for Mendel.
 
