--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+base-files (9.9+mendel2) animal; urgency=medium
+
+  * vendorfile: point to the correct vendor file.
+
+ -- AIY Projects <support-aiyprojects@google.com>  Mon, 10 Dec 2018 11:23:00 -0800
+
 base-files (9.9+mendel1) animal; urgency=medium
 
   * Initial fork of the original Debian base-files package for Mendel.
