base-files: Force changing of the default link if it is wrong
This required due to a side-effect of the way we use multistrap to build the
image. Since it uses upstream debian to do the install, base-files is already
installed from debian, and the link already exists and points to debian. This
change forces the link to the right place if it doesn't match.

Change-Id: I415ff336d5d464bac370e7588cb5babca9953e59

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+base-files (9.9+mendel3) UNRELEASED; urgency=medium
+
+  * vendorfile: force pointing to the correct vendor file if it points to
+	the wrong location.
+
+ -- AIY Projects <support-aiyprojects@google.com>  Mon, 14 Jan 2019 16:36:44 -0800
+
 base-files (9.9+mendel2) animal; urgency=medium
 
   * vendorfile: point to the correct vendor file.
