--- a/debian/changelog
+++ b/debian/changelog
@@ -1,15 +1,10 @@
-base-files (9.9+mendel3) UNRELEASED; urgency=medium
+base-files (9.9-mendel2) mendel-beaker; urgency=medium
 
-  * vendorfile: force pointing to the correct vendor file if it points to
-	the wrong location.
-
- -- AIY Projects <support-aiyprojects@google.com>  Mon, 14 Jan 2019 16:36:44 -0800
-
-base-files (9.9+mendel2) animal; urgency=medium
-
+  * Cut for beaker release and normalization of version.
+  * vendorfile: force pointing to the correct vendor file if it points to the wrong location.
   * vendorfile: point to the correct vendor file.
 
- -- AIY Projects <support-aiyprojects@google.com>  Mon, 10 Dec 2018 11:23:00 -0800
+ -- AIY Projects <support-aiyprojects@google.com>  Wed, 16 Jan 2019 12:00:00 -0800
 
 base-files (9.9+mendel1) animal; urgency=medium
 
