base-files: Fix the versioning separator
Since this is a native package, we can't have a "package version".

Change-Id: Ic155ff4ed2be35e8b502c7b773b351878dd673c3

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-base-files (9.9-mendel2) mendel-beaker; urgency=medium
+base-files (9.9+mendel2) mendel-beaker; urgency=medium
 
   * Cut for beaker release and normalization of version.
   * vendorfile: force pointing to the correct vendor file if it points to the wrong location.
