--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+base-files (9.9+mendel3) mendel-beaker; urgency=medium
+
+  * lsb-release: Add in additional LSB files to make 'lsb_release -a' happy.
+
+  -- AIY Projects <support-aiyprojects@google.com>  Tue, 22 Jan 2019 16:37:00 -0800
+
 base-files (9.9+mendel2) mendel-beaker; urgency=medium
 
   * Cut for beaker release and normalization of version.
