--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+base-files (9.9+mendel4) mendel-beaker; urgency=medium
+
+  * Reinstate a sane debian_version file based upon the version of Debian we're running.
+  * lsb-release: Add in more fields to make 'lsb_relese -a' happy.
+
+ -- Coral <support-aiyprojects@google.com>  Tue, 22 Jan 2019 16:37:00 -0800
+
 base-files (9.9+mendel3) mendel-beaker; urgency=medium
 
   * lsb-release: Add in additional LSB files to make 'lsb_release -a' happy.
