Create changelog entry for chef release
Change-Id: I117f1c2031b0bf7ace2f0b3f7d7af06feef54b05

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+base-files (9.9+mendel5)  mendel-chef; urgency=medium
+
+  * debian_version: Force-remove the symlink
+  * origins: Fix the vendor-url and bugs url
+
+ -- Coral <support-aiyprojects@google.com>  Tue, 19 Mar 2019 17:07:01 -0700
+
 base-files (9.9+mendel4) mendel-beaker; urgency=medium
 
   * Reinstate a sane debian_version file based upon the version of Debian we're running.
