--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,10 @@
-base-files (9.9+mendel5)  mendel-chef; urgency=medium
+base-files (9.9+mendel6) mendel-chef; urgency=medium
+
+  * Bump for the Chef 3.1 point release
+
+ -- Coral <coral-support@google.com>  Thu, 18 Apr 2019 13:40:57 -0700
+
+base-files (9.9+mendel5) mendel-chef; urgency=medium
 
   * debian_version: Force-remove the symlink
   * origins: Fix the vendor-url and bugs url
