--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+base-files (10.3+mendel1) mendel-day; urgency=medium
+
+  * Bump for the Day 4.0 release
+  * Mirror changes to upstream base-files:
+  - Remove VERSION and VERSION_ID from release.
+  - Add CC0-1.0 to common-licenses.
+  - Add Breaks: debian-security-support.
+  - Add VERSION_CODENAME to os-release.
+  - Update Standards-Version to 4.1.3.
+
+ -- Coral <coral-support@google.com>  Tue, 20 Aug 2019 13:40:57 -0700
+
 base-files (9.9+mendel6) mendel-chef; urgency=medium
 
   * Bump for the Chef 3.1 point release
