eagle: Cut release data for Eagle
Change-Id: I5dbbbffd7a0c233a6f09b8250bb3717c47a790d3

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+base-files (10.3+mendel2) mendel-eagle; urgency=medium
+
+  * Bump for the Eagle 5.0 release
+
+ -- Coral <coral-support@google.com>  Mon, 13 Jul 2020 17:00:13 -0500
+
 base-files (10.3+mendel1) mendel-day; urgency=medium
 
   * Bump for the Day 4.0 release
